#86 detail view: fixed layout bugs

--- a/themes/sbvfrd/less/sbvfrd.less
+++ b/themes/sbvfrd/less/sbvfrd.less
@@ -644,6 +644,7 @@ ul[aria-labelledby=dropdownLibraries] {
 
         &:hover {
           background-color: transparent;
+          color: @theme-color;
         }
       }
     }
@@ -677,16 +678,16 @@ ul[aria-labelledby=dropdownLibraries] {
         font-size: 14px !important;
         text-align: left;
         display: inline-block;
-        min-width: 33%;
-        max-width: 33%;
-        padding-left: 0;
       }
+
       span {
-        margin-right: 20px;
+        padding: 5px 4px 5px 0;
       }
     }
   }
 }
+
+
 
 .recordTabs,
 .tab-content {
